--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -6,19 +6,15 @@ engines:
       languages:
       - ruby
       - javascript
-      - python
-      - php
   fixme:
+    enabled: true
+  reek:
     enabled: true
   rubocop:
     enabled: true
 ratings:
   paths:
-  - "**.inc"
   - "**.js"
   - "**.jsx"
-  - "**.module"
-  - "**.php"
-  - "**.py"
   - "**.rb"
 exclude_paths: []
