--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -6,6 +6,7 @@ engines:
       languages:
       - ruby
       - javascript
+      - php
   fixme:
     enabled: true
   reek:
@@ -17,4 +18,5 @@ ratings:
   - "**.js"
   - "**.jsx"
   - "**.rb"
+  - "**.php"
 exclude_paths: []
